<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivBoxArt"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_label_ru"
        app:layout_constraintStart_toEndOf="@+id/ivBoxArt"
        app:layout_constraintTop_toTopOf="@+id/ivBoxArt" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tvNameLabel"
        app:layout_constraintTop_toTopOf="@+id/tvNameLabel"
        tools:text="name" />

    <TextView
        android:id="@+id/tvChanelNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_num_label_ru"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvChanelNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/tvChanelNumLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        tools:text="150" />

    <TextView
        android:id="@+id/tvViewerNumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/views_num_label_ru"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ivBoxArt"
        app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvChanelNum" />

    <TextView
        android:id="@+id/tvViewerNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tvViewerNumLabel"
        app:layout_constraintStart_toEndOf="@+id/tvViewerNumLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvChanelNum"
        tools:text="600" />

</androidx.constraintlayout.widget.ConstraintLayout>
